adds natural semantics

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -100,7 +100,7 @@ If there is evidence of the equivalence of $P_0$ and $P_1$, then $P_0
   \equiv P_1$, then $P_0 \equiv P_1$.
 \end{lemma}
 
-\subsection{An automatic equivalence prover}
+\subsection{An automatic equivalence verifier}
 \label{sec:verifier}
 %
 \BH{define equivalence verifier. Maintains relational invariants over
