--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -9,11 +9,19 @@
 
 \newcommand{\expr}{\mathsf{Expr}}
 
+\newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
+
 \newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
 
 \newcommand{\freevars}{\mathsf{FreeVars}}
 
+\newcommand{\hastype}{\vdash}
+
 \newcommand{\issat}{\textsc{IsSat}\xspace}
+
+\newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
+
+\newcommand{\judges}{\vdash}
 
 \newcommand{\ops}{\mathsf{ops}}
 
