approach: adds note on finding relational invariants

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -124,6 +124,15 @@ If there is evidence of the equivalence of $P_0$ and $P_1$, then $P_0
   the same set of expressions. Search for a sufficient set can branch:
   we just need to find an inductive set along some expression.}
 
+\BH{sets of derivation nodes that we're interested in are maximal
+  anti-chains of nodes under the dependence relation.}
+
+\BH{get the relational invariant for each set of expressions as
+  interpolant. Pre-formula: disjunction of cases, one for each
+  expression. Post-formula: conjunction of rule constraints for all
+  steps left. Note that we don't need to use the other relational
+  invariants.}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "p"
