--- a/draft/background.tex
+++ b/draft/background.tex
@@ -196,8 +196,8 @@ y_0, \ldots, y_n ]$, the \lia formula constraining the equality of
 each element in $X$ with its corresponding element in $Y$, i.e., the
 formula $\bigland_{0 \leq i \leq n} x_i = y_i$, is denoted $X = Y$.
 %
-The repeated replacement of variables $\varphi[ y_0 / x_0 \ldots y_{n
-  - 1} / x_{n - 1} ]$ is denoted $\replace{\varphi}{Y}{X}$.
+The repeated replacement of variables $\varphi[ y_0 / x_0 \ldots y_{n}
+/ x_{n} ]$ is denoted $\replace{\varphi}{Y}{X}$.
 %
 For each formula $\varphi$ defined over free variables $X$,
 $\replace{\varphi}{X}{Y}$ is denoted alternatively as $\varphi[Y]$.
