--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -7,7 +7,7 @@
 
 \newcommand{\evalsto}{\Downarrow}
 
-\newcommand{\expr}{\mathsf{Expr}}
+\newcommand{\expr}{\mathsf{Exprs}}
 
 \newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
 
