--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -5,6 +5,8 @@
 
 \newcommand{\degreeof}{\mathsf{deg}}
 
+\newcommand{\evalrules}{\mathsf{EvalRules}}
+
 \newcommand{\evalsto}{\Downarrow}
 
 \newcommand{\expr}{\mathsf{Exprs}}
