--- a/draft/p.tex
+++ b/draft/p.tex
@@ -74,6 +74,8 @@
 % abstract.tex: DEP, contains abstract
 \input{abstract}
 
+\BH{upgrade to new version of die template}
+
 \input{background}
 
 \input{approach}
