--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,9 +1,13 @@
 % shorthand: paper-specific shorthand
 \newcommand{\base}{\mathsf{Base}}
 
+\newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
+
 \newcommand{\const}{\mathsf{Const}}
 
 \newcommand{\degreeof}{\mathsf{deg}}
+
+\newcommand{\derdagsof}[1]{\mathsf{DerDAGs}[ #1 ]}
 
 \newcommand{\evalrules}{\mathsf{EvalRules}}
 
@@ -19,11 +23,17 @@
 
 \newcommand{\hastype}{\vdash}
 
+\newcommand{\isind}{\mathsf{IsInd}}
+
 \newcommand{\issat}{\textsc{IsSat}\xspace}
 
 \newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
 
 \newcommand{\judges}{\vdash}
+
+\newcommand{\mergeinvs}{\textsc{MergeInvs}\xspace}
+
+\newcommand{\nonequiv}{\mathsf{NonEquiv}}
 
 \newcommand{\ops}{\mathsf{ops}}
 
@@ -48,6 +58,12 @@
 \newcommand{\values}{\mathsf{Values}}
 
 \newcommand{\vars}{\mathsf{Vars}}
+
+\newcommand{\verify}{\textsc{Verify}\xspace}
+
+\newcommand{\verifyaux}{\textsc{VerifyAux}\xspace}
+
+\newcommand{\verifyders}{\textsc{VerifyDers}\xspace}
 
 \newcommand{\vocab}{\mathsf{Vocab}}
 
