--- a/infer-refinements/hdr.tex
+++ b/infer-refinements/hdr.tex
@@ -1,4 +1,3 @@
-% TODO: title
 \title{Refinement Type Inference as Logic Programming}
 
 % when 'make draft'
@@ -9,6 +8,19 @@
  \cfoot{\thepage\ of \pageref{LastPage}}
 \fi
 
-% TODO: author
+% blind
+% \author{Paper \#123}
+
 \author{
+ Isaac Newton$^\dagger$\; 
+ Albert Einstein$^\ddagger$\;
+ Marie Curie$^\ast$\;
+ James Clerk Maxwell$^\dagger$\;
+\\
+ Richard Feynman$^\dagger$\;
+\\\\
+ \emph{$^\dagger$  Trinity College}, \\
+ \emph{$^\ddagger$ University of Zurich}, 
+ \emph{$^\ast$ 	 University of Paris}
 }
+
