--- a/infer-refinements/p.bib
+++ b/infer-refinements/p.bib
@@ -1,7 +1,7 @@
-@article{tmp,
-  author    = {Bill Harris},
-  title     = {Tmp},
-  journal   = {Tmp},
-  year      = {2015},
+@manual{latex,
+ author = {Oetiket, T. and Partl, H. and Hyna and Schlegl, E.},
+ title  = {{The not-so-short introduction to Latex}},
+ year   = 1995,
+ note   = {\URL{http://www.ctan.org/tex-archive/info/lshort/english/lshort.pdf}}
 }
 
