intro: first draft

--- a/syn-refinements/p.tex
+++ b/syn-refinements/p.tex
@@ -7,7 +7,7 @@
 % common packages
 \include{pkgs}
 
-\newcommand{\sys}{\mbox{\textsc{Die}}\xspace}
+\newcommand{\sys}{\mbox{\textsc{Reckon}}\xspace}
 
 % ref. http://en.wikibooks.org/wiki/LaTeX/Colors
 \newcommand{\BH}[1]{\textcolor{Red}{BH: #1}}
@@ -39,8 +39,6 @@
 \input{relwk}
 
 \input{conclusion}
-
-\input{ack}
 
 \balance
 \bibliographystyle{abbrvnat}
