--- a/syn-refinements/background.tex
+++ b/syn-refinements/background.tex
@@ -1,5 +1,5 @@
 \section{Background}
-\label{sec:background}
+\label{s:background}
 %
 In this section, we define as our target language an extension of the
 simply-typed $\lambda$-calculus (STLC) (\autoref{sec:stlc}).
@@ -244,6 +244,8 @@ To present \sys, we assume access to a procedure \solveitp that, given
 mutually unsatisfiable \lia formulas $\varphi_0, \varphi_1$, returns
 an interpolant of $\varphi_0$ and $\varphi_1$.
 
+\BH{replace with background from shara paper}
+
 \paragraph{Symbolic encoding of semantics}
 %
 The semantics of $\stlc$ is represented symbolically using \lia
@@ -255,35 +257,8 @@ In particular, for each $e \in \expr$ with subexpressions $e_0,
 \ldots, e_n \in \expr$, there is some $\varphi \in \formulas{\vars[e],
   \vars[e_0], \ldots, \vars[e_n]}$ such that
 
-\BH{define stepsto relations over expressions. Sub-expression
-  relations, except for with fixed-point expressions. Define alpha and
-  nu as result variables.}
-
-\subsection{Partial equivalence of STLC programs}
-\label{sec:peq}
-%
-If STLC programs $P_0$ and $P_1$, applied to the same input, evaluate
-to the same value, then $P_0$ and $P_1$ are partially equivalent.
-%
-\begin{defn}
-  \label{defn:peq}
-  For $P_0, P_1 \in \stlc$, if for all $v, v_0, v_1 \in values$ such
-  that $P_0 v \evalsto v_0$ and $P_1 v evalsto v_1$, it holds that
-  $v_0 = v_1$, then $P_0$ and $P_1$ are \emph{partially equivalent}.
-\end{defn}
-%
-The fact that $P_0$ and $P_1$ are partially equivalent is denoted $P_0
-\equiv P_1$.
-%
-The main problem that we address in this work is, given STLC programs
-$P_0$ and $P_1$, to determine if $P_0 \equiv P_1$.
-
-% disclaimer: we're keeping it simple, it doesn't matter:
-\autoref{defn:peq} only allows programs to be partially equivalent if
-they take exactly one argument.
-%
-The definition can be directly generalized to include pairs of
-programs over tuples of arguments of arbitrary length.
+\BH{replace with new problem defn: just checking if a program has a
+  type}
 
 %%% Local Variables: 
 %%% mode: latex
